[gd_scene load_steps=4 format=3 uid="uid://bolnrymfccqh"]

[ext_resource type="PackedScene" uid="uid://duhev2d03crw3" path="res://src/schedule_screen/schedule_screen.tscn" id="1_ldh5e"]
[ext_resource type="Script" path="res://src/schedule_maker/schedule_maker.gd" id="2_73vg4"]
[ext_resource type="PackedScene" uid="uid://bxyesfcquu10e" path="res://src/toggler/toggler.tscn" id="3_s020a"]

[node name="ScheduleMaker" instance=ExtResource("1_ldh5e")]
script = ExtResource("2_73vg4")

[node name="Toggler" parent="." index="0" instance=ExtResource("3_s020a")]

[node name="ExportButton" type="Button" parent="ScrollContainer/ButtonContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
text = "Export"

[node name="ExportPopup" type="ConfirmationDialog" parent="." index="3"]
unique_name_in_owner = true
title = "Export Schedule"
size = Vector2i(320, 240)
ok_button_text = "Copy"
dialog_hide_on_ok = false
cancel_button_text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="ExportPopup" index="3"]
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 191.0

[node name="Label" type="Label" parent="ExportPopup/VBoxContainer" index="0"]
layout_mode = 2
text = "Copy the text below:"

[node name="ExportText" type="TextEdit" parent="ExportPopup/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[connection signal="pressed" from="ScrollContainer/ButtonContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="confirmed" from="ExportPopup" to="." method="_on_export_popup_confirmed"]
